--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "indexgen",
+  "name": "idxgen",
   "version": "1.0.0",
   "description": "Simple generator of index files for ES-modules",
   "main": "src/index.js",
   "keywords": ["index", "generator", "javascript", "flow"],
   "author": "Vladislav Orlov <i@orlov-vo.ru>",
   "license": "MIT",
-  "repository": "github:orlov-vo/indexgen",
+  "repository": "github:orlov-vo/idxgen",
   "bin": {
-    "index-gen": "bin/indexgen.js"
+    "index-gen": "bin/idxgen.js"
   },
   "dependencies": {
     "cosmiconfig": "^4.0.0",
